--- a/p3/styles/style.css
+++ b/p3/styles/style.css
@@ -2,16 +2,6 @@
     margin: 0;
     padding: 0;
 }
-
-.bg-blue,.btn-blue{
-	background-color: #00a2c3;
-}
-.btn-blue{
-	color: #fff;
-}
-.text-blue{
-	color: #00a2c3;
-}
 .accordion-button{
     color: #fff !important;
     background: #00a2c3;
@@ -19,4 +9,16 @@
 }
 .accordion-button::after {
     display: none;
+}
+.bg-blue,.btn-blue, .accordion-header, .list-group-item.active{
+    background-color: #00a2c3;
+}
+.btn-blue{
+    color: #fff;
+}
+.list-group-item{
+    border-radius: 0% !important;
+}
+.text-blue{
+    color: #00a2c3;
 }
