#010 - fix navbar and replace color primary with blue css

--- a/p3/styles/style.css
+++ b/p3/styles/style.css
@@ -16,6 +16,10 @@
 .btn-blue{
     color: #fff;
 }
+.btn-blue:hover{
+    background-color: #00a2c3;
+    color: #fff;
+}
 .list-group-item{
     border-radius: 0% !important;
 }
