--- a/p4_again/css/index.css
+++ b/p4_again/css/index.css
@@ -1,3 +1,8 @@
+/* Importar los estilos de la fuente */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap");
 /* Estilos generales de la barra de noticias */
 .breadcumb {
 	background-color: #fff;
@@ -92,7 +97,7 @@
 .main-header.portada .main-site-highlights {
 	font-family: Roboto, Arial, Helvetica, sans-serif;
 	font-weight: 700;
-	font-size: 12px;
+	font-size: 10px;
 	color: #221f1f;
 	position: absolute;
 	left: 0;
@@ -123,12 +128,12 @@
 }
 
 .main-header.portada .main-site-highlights ul > * + * {
-	margin-left: 15px;
+	margin-left: 10px;
 	border-left: 1px solid #e2e2e2;
 	padding-left: 10px;
 }
 .main-header.portada .main-site-highlights a strong {
-	padding-left: 5px;
+	padding-left: 1px;
 }
 
 a {
@@ -152,6 +157,12 @@ a {
 	right: 0;
 	top: 0;
 	height: 60px;
+}
+/*Alinerar a la derecha*/
+.tools-header{
+    display: flex;
+    justify-content: flex-end !important;
+    align-items: center;
 }
 .main-header .edition-selector {
 	float: left;
@@ -302,9 +313,10 @@ a {
 	height: 0;
 	transition: opacity 0.3s ease-out 0s, height 0.1s ease-out 0s;
 }
-.main-header.portada .patrocinio svg {
+.main-header.portada .patrocinio svg,  .main-highlight-radio svg {
 	height: 41px !important;
-	width: 35px !important;
+	width: 30px !important;
+    font-size: xx-small ;
 }
 
 .btn-danger {
@@ -368,6 +380,7 @@ a {
 }
 .header-column{
     margin-top: 0.8em;
+    list-style: none;
 }
 .header-column-main{
     font-family: Roboto,Arial,Helvetica,sans-serif;
@@ -383,6 +396,17 @@ a {
     color:#fff;
     margin-bottom: 8px;
 }
+.header-column-main-content a{
+    font-family: Roboto,Arial,Helvetica,sans-serif;
+    text-decoration: none;
+    font-weight:normal;
+    font-size: 13px;
+    color: #aeb6bf;
+}
+.header-column-main-content a:hover, .header-column-main-h1:hover{
+    color: #c00;
+    cursor: pointer;
+}
 .dropdown-menu:hover .dropdown-item-div:hover{
     display: block;
 }
@@ -390,4 +414,56 @@ a {
     color: white;
     opacity: 0.5;
     font-size: 0.7em;
+}
+/*Por si no funciona el breadcrumb*/
+.breadcrumb-item+.breadcrumb-item::before {
+    float: left;
+    padding-right: var(--bs-breadcrumb-item-padding-x);
+    color: rgb(255 255 255 / 75%);
+    content: var(--bs-breadcrumb-divider, "/");
+}
+.vMore{
+    font-size: 1rem !important;
+}
+.title-news{
+    font-size: 1rem !important;
+    word-break: break-word;
+    color: #ffffff;
+    display: inline;
+    font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.card{
+    border: none !important;
+    border-radius: 0%;
+}
+.card-body{
+    padding: 0 !important;
+}
+.card-img-top{
+    border-radius: 0%;
+}
+/*Oscurecer la imagen en la parte de abajo*/
+.card-img-overlay{
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+}
+/*Title-notice al final*/
+.title-notice{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0.5em;
+}
+.title-notice a{
+    color: #ffffff !important;
+    font-family: Roboto Condensed,Arial,Helvetica,sans-serif;
+    font-weight: 800;
+    text-decoration: none;
+}
+.author{
+    color: #000 !important;
+    font-family: Roboto Condensed,Arial,Helvetica,sans-serif;
+    font-weight: 800;
 }
