--- a/p4_again/css/index.css
+++ b/p4_again/css/index.css
@@ -337,7 +337,19 @@ a {
 	background-color: black;
 	color: white;
 }
-.navbar-nav > li > .nav-link:hover:not(.nav1-item) {
+.btn-danger-outline-inverted {
+	background-color: transparent;
+	color: #fff;
+	border: 1px solid #fff;
+}
+.btn-danger-outline-inverted:hover {
+	background-color: black;
+	color: white;
+}
+.navbar-light{
+    margin-left: -0.6rem !important;
+}
+.navbar-nav > li > .nav-link:hover:not(.nav1-item, .portada-item) {
 	background: rgba(20, 29, 37, 0.97) !important;
 }
 /* Dejar el hover cuando se hace click */
@@ -377,6 +389,9 @@ a {
 .navbar-brand {
 	margin-right: 0 !important;
 }
+.nav-link{
+    font-size: 16px !important;
+}
 .div-menu-navbar {
     background: rgba(20, 29, 37, 0.97) !important;
     color: white !important;
@@ -386,6 +401,17 @@ a {
     position: fixed;
     border-radius: 0% !important;
     border: none !important;
+    z-index: 1000 !important;
+}
+.nav-item-diagonal{
+    background-color: #af0000;
+    height: 44px !important;
+    margin-top: 0.2rem;
+    clip-path: polygon(5% 0, 100% 0%, 95% 100%, 0% 100%) !important;
+}
+.nav-item-diagonal a{
+    margin-left: 5px;
+    margin-right: 5px;
 }
 /* Media query para el menú */
 /*Para que se vea bien en el móvil*/
@@ -393,8 +419,25 @@ a {
     .div-menu-navbar {
         width: 100% !important;
     }
+    .title-news{
+        font-size: 1rem !important;
+    }
 }
-
+/* Para que se vea bien en la tablet */
+@media (min-width: 768px) and (max-height: 1200px){
+    .card-overlay-2>.title-news{
+        font-size: 0.8rem !important;
+    }
+    .nav-item-diagonal{
+        display: none !important;
+    }
+}
+/*Para que se vea bien en el escritorio*/
+@media (min-width: 1200px) {
+    .nav-item-diagonal{
+        display: block !important;
+    }
+}
 .dropdown-item-div {
 	color: white;
 }
@@ -575,7 +618,7 @@ select.form-select {
 	width: 2em !important;
 	height: 2em !important;
 	top: 50%;
-    opacity: 0.4;
+    opacity: 0.2;
 }
 /* Inicialmente, oculta el menú desplegable */
 .dropdown-menu {
